--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,13 +4,22 @@ title: Welcome to Middleman
 
 <div id='snow'></div>
 
+
+
+
+
+
 <div class='container'>
+
   <div class='col-sm-12 top-banner'>
     <%= image_tag 'top-banner.png', class: 'img-responsive' %>
   </div>
+  <div class='col-sm-12'>
+    <div class='clock'></div>
+  </div>
   <div id='shops' class='col-sm-12 row'>
     <% 15.times do %>
-      <% link_to '#', class: 'shop-link col-sm-4', target: '_blank' do %>
+      <% link_to '#', class: 'shop-link col-sm-6', target: '_blank' do %>
         <div class='shop'>
           
         </div>
