--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -1,4 +1,5 @@
 @import "bootstrap"
+@import "flipclock"
 
 .popover
   max-width: 300px !important
@@ -35,6 +36,16 @@ body
     -moz-animation: snow 30s linear infinite
     -ms-animation: snow 30s linear infinite
     animation: snow 30s linear infinite
+
+  div.clock
+    display: block
+    padding-top: 40px
+    margin-left: auto
+    margin-right: auto
+    width: 630px
+
+    span.flip-clock-label
+      display: none
 
   div.top-banner
     padding-top: 60px
