--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -54,10 +54,24 @@ body
       margin: 0 auto
 
   div.bottom-banner
+    margin-top: 20px
     margin-bottom: 80px
     z-index: 2
-    img
-      margin: 0 auto
+    > div
+      img 
+        margin: 0 auto
+        line-height: 90px
+        vertical-align: middle
+
+    div.sponsor
+      background: rgba(255, 255, 255, 0.2)
+      height: 90px
+      text-align: center
+      border-radius: 20px
+      img
+        margin-top: 20px
+
+
 
   div#shops
     margin-top: 30px
