--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,16 +1,10 @@
 ---
-title: Welcome to Middleman
+title: Online Winter Sale 2014
 ---
 
 <div id='snow'></div>
 
-
-
-
-
-
 <div class='container'>
-
   <div class='col-sm-12 top-banner'>
     <%= image_tag 'top-banner.png', class: 'img-responsive' %>
   </div>
@@ -19,7 +13,7 @@ title: Welcome to Middleman
   </div>
   <div id='shops' class='col-sm-12 row'>
     <% 15.times do %>
-      <% link_to '#', class: 'shop-link col-sm-6', target: '_blank' do %>
+      <% link_to '#', class: 'shop-link col-sm-4', target: '_blank' do %>
         <div class='shop'>
           
         </div>
@@ -27,6 +21,14 @@ title: Welcome to Middleman
     <% end %>
   </div>
   <div class='col-sm-12 bottom-banner'>
-    <%= image_tag 'footer.png', class: 'img-responsive' %>
+    <div class='col-sm-3 col-sm-offset-1 sponsor'>
+      <%= image_tag 'krungsri_logo.png', class: 'img-responsive' %>
+    </div>
+    <div class='col-sm-3'>
+      <%= image_tag 'sponsored_1.png', class: 'img-responsive' %>
+    </div>
+    <div class='col-sm-3 sponsor'>
+      <%= image_tag 'dtac_logo.png', class: 'img-responsive' %>
+    </div>
   </div>
 </div>
