--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,10 +6,7 @@
     
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
-    <!-- Timer script. See Zack, I even commented it! -->
-    <script src="/javascripts/countdown.js"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title %></title>
     
