Added sripanwa banner

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,9 @@ title: Online Winter Sale 2014
 ---
 
 <div id='snow'></div>
-
+<div id='sripanwa'>
+  <%= image_tag 'win_sripanwa.png' %>
+</div>
 <div class='container'>
   <div class='col-sm-12 top-banner'>
     <%= image_tag 'top-banner.png', class: 'img-responsive' %>
