--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -23,6 +23,10 @@ body
   -o-background-size: cover
   background-size: cover
 
+  div#sripanwa
+    position: absolute
+    right: 0px
+
   div#snow
     background: none
     background-image: image-url('images/snow-1.png'), image-url('images/snow-2.png'), image-url('images/snow-3.png')
