--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,13 +23,13 @@ title: Online Winter Sale 2014
     <% end %>
   </div>
   <div class='col-sm-12 bottom-banner'>
-    <div class='col-sm-3 col-sm-offset-1 sponsor'>
+    <div class='col-sm-3 col-sm-offset-1 sponsor' data-content="<img src='images/krungsri_512.jpg' width='256' height='256' />">
       <%= image_tag 'krungsri_logo.png', class: 'img-responsive' %>
     </div>
     <div class='col-sm-3'>
       <%= image_tag 'sponsored_1.png', class: 'img-responsive' %>
     </div>
-    <div class='col-sm-3 sponsor'>
+    <div class='col-sm-3 sponsor' data-content="<img src='images/dtac_512.jpg' width='256' height='256'/>">
       <%= image_tag 'dtac_logo.png', class: 'img-responsive' %>
     </div>
   </div>
